--- a/site.css
+++ b/site.css
@@ -1,20 +1,48 @@
 html {
     margin: 0;
+    font-family: coolvetica;
+}
+
+@font-face {
+    font-family: coolvetica;
+    src: url(./assets/font/coolvetica.ttf);
 }
 
 body {
     margin: 0;
     background-color: #263248;
-}
-
-#app {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .alex {
     width: 20%;
     position: absolute;
     visibility: hidden;
-    transition: all linear;
+    transition: transform 2s;
+    cursor: pointer;
+}
+
+/* The real code */
+.rotate {
+    -webkit-transform: rotate(360deg);  /* Chrome, Safari 3.1+ */
+    -moz-transform: rotate(360deg);  /* Firefox 3.5-15 */
+    -ms-transform: rotate(360deg);  /* IE 9 */
+    -o-transform: rotate(360deg);  /* Opera 10.50-12.00 */
+    transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera 12.10+ */
+}
+
+.greeting {
+    opacity: 1;
+    font-size: 3.25rem;
+    color: #E7A522;
+    transition: opacity 1s; 
+}
+
+.greeting.-is--hidden {
+    opacity: 0;
 }
 
 
